Edit contents  Add lang folder

--- a/contents.html
+++ b/contents.html
@@ -60,10 +60,10 @@
 										<img src="/contents_resources/icons/logo_css.png" width="47"></a>
 										<a href="contents/JS/JS.html" target="_blank">
 										<img src="/contents_resources/icons/logo_js.png" width="51"></a>
-										<a href="contents/PYSPARK/index.html" target="_blank">
+										<!-- <a href="contents/PYSPARK/index.html" target="_blank">
 										<img src="/contents_resources/icons/logo_spark.png" width="43"></a>
 										<a href="contents/PYSPARK/index.html" target="_blank">
-										<img src="/contents_resources/icons/logo_sklearn.png" width="43"></a>
+										<img src="/contents_resources/icons/logo_sklearn.png" width="43"></a> -->
 									</section><br><br>
 
 									<h1 class="major">Articales</h1>
@@ -74,7 +74,7 @@
 											<table class="alt">
 												<thead>
 													<tr>
-														<th>Name</th>
+														<th>Articales</th>
 														<th>Tags</th>
 														<th>Links</th>
 													</tr>
@@ -83,27 +83,39 @@
 													<tr>
 														<td>Python Clean Code</td>
 														<td>Production Python</td>
-														<td><a href="contents/articles/Python_Clean_Code.html" target="_blank">Link</a></td>
+														<td><a href="contents/articles/Python_Clean_Code.html" target="_blank">Open</a></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</section>
+
+									<section>
+										<h1>Docs: Cloud</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Documents</th>
+														<th>Details</th>
+														<th>Links</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Amazon Cloud</td>
+														<td>Amazon Cloud documents collection</td>
+														<td><a href="https://docs.aws.amazon.com/" target="_blank">Link</a></td>
 													</tr>
 													<tr>
-														<td>Item Two</td>
-														<td>Tags</td>
-														<td>Link</td>
+														<td>Azure</td>
+														<td>Azure documents collection</td>
+														<td><a href="https://docs.microsoft.com/azure/?product=featured" target="_blank">Link</a></td>
 													</tr>
 													<tr>
-														<td>Item Three</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Four</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Five</td>
-														<td>Tags</td>
-														<td>Link</td>
+														<td>Google Cloud Platform</td>
+														<td>GCP documents collection</td>
+														<td><a href="https://cloud.google.com/docs" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
 											</table>
@@ -116,36 +128,16 @@
 											<table class="alt">
 												<thead>
 													<tr>
-														<th>Name</th>
-														<th>Tags</th>
+														<th>Links</th>
+														<th>Details</th>
 														<th>Links</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
-														<td>Item One</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Two</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Three</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Four</td>
-														<td>Tags</td>
-														<td>Link</td>
-													</tr>
-													<tr>
-														<td>Item Five</td>
-														<td>Tags</td>
-														<td>Link</td>
+														<td>Online Test Environment</td>
+														<td>Cloud test environment for Ruby on Rails, Node.js, Django, MySQL, WordPress, Java(Tomcat), PHP(LAMP), Laravel, Go, Jupyter notebook...</td>
+														<td><a href="https://paiza.cloud/" target="_blank">Link</a></td>
 													</tr>
 												</tbody>
 											</table>
