--- a/contacts.html
+++ b/contacts.html
@@ -63,6 +63,9 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<ul class="contact">
+								<li>
+									<img src="images/jingwora.png" width="150" />
+								</li>
 								<li class="icon solid fa-home">
 									Tokyo Japan
 								</li>
