Update contents add AI

--- a/contents.html
+++ b/contents.html
@@ -123,12 +123,34 @@
 									</section>
 
 									<section>
+										<h1>AI</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Titles</th>
+														<th>Details</th>
+														<th>Links</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Deep.js Style Transfer project</td>
+														<td>Github repository contains an implementation of arbitrary style transfer running fully inside the browser using TensorFlow.js.</td>
+														<td><a href="https://github.com/reiinakano/arbitrary-image-stylization-tfjs" target="_blank">Link</a></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</section>
+
+									<section>
 										<h1>Useful Links</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
 													<tr>
-														<th>Links</th>
+														<th>Titles</th>
 														<th>Details</th>
 														<th>Links</th>
 													</tr>
