--- a/contents.html
+++ b/contents.html
@@ -135,6 +135,21 @@
 												</thead>
 												<tbody>
 													<tr>
+														<td>Tensorflow Playground</td>
+														<td>Interactive visualization of neural networks, written in TypeScript using d3.js.</td>
+														<td><a href="http://playground.tensorflow.org/" target="_blank">Link</a></td>
+													</tr>
+													<tr>
+														<td>GAN Playground</td>
+														<td>Interactive visualization of generative adversarial network (GAN).</td>
+														<td><a href="https://poloclub.github.io/ganlab/" target="_blank">Link</a></td>
+													</tr>
+													<tr>
+														<td>Self-driving cars simulation</td>
+														<td>Self-driving cars in the browser using reinforcement learning.</td>
+														<td><a href="https://janhuenermann.com/blog/learning-to-drive" target="_blank">Link</a></td>
+													</tr>
+													<tr>
 														<td>Deep.js Style Transfer project</td>
 														<td>Github repository contains an implementation of arbitrary style transfer running fully inside the browser using TensorFlow.js.</td>
 														<td><a href="https://github.com/reiinakano/arbitrary-image-stylization-tfjs" target="_blank">Link</a></td>
@@ -145,7 +160,7 @@
 									</section>
 
 									<section>
-										<h1>Useful Links</h1>
+										<h1>Development Resources</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -156,6 +171,16 @@
 													</tr>
 												</thead>
 												<tbody>
+													<tr>
+														<td>Icon8</td>
+														<td>Free icons, photos, vectors, music and tools.</td>
+														<td><a href="https://icons8.com/" target="_blank">Link</a></td>
+													</tr>
+													<tr>
+														<td>Tinypng</td>
+														<td>Free Image compression.</td>
+														<td><a href="https://tinypng.com/" target="_blank">Link</a></td>
+													</tr>
 													<tr>
 														<td>Online Test Environment</td>
 														<td>Cloud test environment for Ruby on Rails, Node.js, Django, MySQL, WordPress, Java(Tomcat), PHP(LAMP), Laravel, Go, Jupyter notebook...</td>
