--- a/contents.html
+++ b/contents.html
@@ -69,7 +69,7 @@
 									<h1 class="major">Articales</h1>
 
 									<section>
-										<h1>Python</h1>
+										<h1>📘 Python</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -91,7 +91,7 @@
 									</section>
 
 									<section>
-										<h1>Docs: Cloud</h1>
+										<h1>📗 Docs: Cloud</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -123,7 +123,7 @@
 									</section>
 
 									<section>
-										<h1>AI</h1>
+										<h1>📕 AI</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -160,7 +160,7 @@
 									</section>
 
 									<section>
-										<h1>Development Resources</h1>
+										<h1>📕 Development Resources</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
