--- a/contents.html
+++ b/contents.html
@@ -123,7 +123,7 @@
 									</section>
 
 									<section>
-										<h1>📕 AI</h1>
+										<h1>📕 AI ML</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -134,6 +134,11 @@
 													</tr>
 												</thead>
 												<tbody>
+													<tr>
+														<td>madewithml.com</td>
+														<td>ML resources by topic, curated by the community.</td>
+														<td><a href="https://madewithml.com/topics/?fbclid=IwAR303XktXH61dzARYFveWyzKTajXfB3fHDXqLLEPJuFYN2fou4EgvFTJZbE" target="_blank">Link</a></td>
+													</tr>
 													<tr>
 														<td>Tensorflow Playground</td>
 														<td>Interactive visualization of neural networks, written in TypeScript using d3.js.</td>
