Article Add Object detection

--- a/contents.html
+++ b/contents.html
@@ -69,7 +69,7 @@
 									<h1 class="major">Articales</h1>
 
 									<section>
-										<h1>📘 Python</h1>
+										<h1>📘 My Articles</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
@@ -84,6 +84,11 @@
 														<td>Python Clean Code</td>
 														<td>Production Python</td>
 														<td><a href="contents/articles/Python_Clean_Code.html" target="_blank">Open</a></td>
+													</tr>
+													<tr>
+														<td>Object Detection Summary</td>
+														<td>Collection of Object detection methods.</td>
+														<td><a href="contents/articles/Object_Detection.html" target="_blank">Open</a></td>
 													</tr>
 												</tbody>
 											</table>
