Add resposive to mobile for all article pages

--- a/contents/CSS/CSS.html
+++ b/contents/CSS/CSS.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CSS</title>
         <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
         <link rel="icon" type="image/png" href="/contents_resources/icons/logo_css.png">
