--- a/contents/HTML/HTML.html
+++ b/contents/HTML/HTML.html
@@ -73,7 +73,7 @@
 
         <div id = "navh-html_summary"></div>
         <p style="padding:20px"></p>
-        <img src="/contents_resources/icons/logo_html.png" style="float:left;width:50px;"> <br>
+        <img src="/contents_resources/icons/logo_html.png" style="width:50px;"> <br>
         <h1>HTML Essentials</h1>
         <br>
         <p>HTML is the standard markup language for Web pages.</p>
