--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -67,7 +67,7 @@
 
 <div id = "home"></div>
 <p style="padding:20px"></p>
-<img src="/contents_resources/icons/logo_js.png" style="float:left;width:30px;"> 
+<img src="/contents_resources/icons/logo_js.png" style="width:50px;">
 <h1> JS Essentials</h1>
 <br><br>
 <p>
