Contents add databricks

--- a/contents.html
+++ b/contents.html
@@ -201,6 +201,28 @@
 										</div>
 									</section>
 
+									<section>
+										<h1>📕 Databricks</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Titles</th>
+														<th>Details</th>
+														<th>Links</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Delta</td>
+														<td>Delta API</td>
+														<td><a href="https://docs.microsoft.com/en-us/azure/databricks/delta/">Link</a></td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</section>									
+									
 									<div style="
 									display: flex;
 									flex-direction: column;
