Update code essence

--- a/contents.html
+++ b/contents.html
@@ -49,8 +49,8 @@
 										<p>Collections of resources related to data anlysis, artificial intelligent, business intelligents and more...</p>
 										<br>
 										
-										<h1 class="major">CODE Essentials</h1>
-										<p>Collection of smart code.</p>
+										<img src="contents_resources/icons/code_essence.png" width="80"><h1>CODE ESSENCE</h1>
+										<p>My essence extraction of key programming languages</p>
 
 										<a href="contents/SQL/SQL.html" target="_blank">
 										<img src="/contents_resources/icons/logo_sql.png" width="50"></a>
