Adjust HTML Page

--- a/contents/HTML/HTML.html
+++ b/contents/HTML/HTML.html
@@ -862,8 +862,10 @@
         <section class="top-block">
           <header class="sub">
             <p>&lt;header&gt;</p>
-            <h2>Header &lt;h2&gt;	&lt;/h2&gt;</h2>
-            <nav>Navigaion &lt;nav&gt;	&lt;/nav&gt;</nav>
+            <h2>Header</h2>
+            <p>&lt;h2&gt;&lt;/h2&gt;</p>
+            <nav>Navigaion</nav>
+            <p>&lt;nav&gt;&lt;/nav&gt;</p>
             <p>&lt;/header&gt;</p>
           </header>
         </section>
