Update HTML page

--- a/contents/HTML/HTML.html
+++ b/contents/HTML/HTML.html
@@ -891,11 +891,11 @@
           <nav>
               <ul>
                 <li><code>&lt;aside&gt;	&lt;ul&gt;</code></li>
-                <li>category 1</li>
+                <li>item1</li>
                 <code>&lt;li&gt;	&lt;/li&gt;</code>
-                <li>category 2</li>
+                <li>item2</li>
                 <code>&lt;li&gt;	&lt;/li&gt;</code>
-                <li>category 3 </li>
+                <li>item3</li>
                 <code>&lt;li&gt;	&lt;/li&gt;</code>
                 <li><code>&lt;/ul&gt;	&lt;/aside&gt;</code></li>
               </ul>
