--- a/contents/CSS/CSS.html
+++ b/contents/CSS/CSS.html
@@ -97,275 +97,330 @@
             <tr>
               <td><a href="sel_id.asp">#<i>id</i></a></td>
               <td class="notranslate">#firstname</td>
+              <td></td>
               <td>Selects the element with id="firstname"</td>
             </tr>  <tr>
               <td><a href="sel_all.asp">*</a></td>
               <td class="notranslate">*</td>
+              <td></td>
               <td>Selects all elements</td>
             </tr>
             <tr>
               <td><i><a href="sel_element.asp">element</a></i></td>
               <td class="notranslate">p</td>
+              <td></td>
               <td>Selects all &lt;p&gt; elements</td>
             </tr>
             <tr>
               <td><i><a href="sel_element_class.asp">element.class</a></i></td>
               <td class="notranslate">p.intro</td>
+              <td></td>
               <td>Selects all &lt;p&gt; elements with class="intro"</td>
             </tr>
             <tr>
               <td><i><a href="sel_element_comma.asp">element,element</a></i></td>
               <td class="notranslate">div, p</td>
+              <td></td>
               <td>Selects all &lt;div&gt; elements and all &lt;p&gt; elements</td>
             </tr>
             <tr>
               <td><a href="sel_element_element.asp"><i>element</i> <i>element</i></a></td>
               <td class="notranslate">div p</td>
+              <td></td>
               <td>Selects all &lt;p&gt; elements inside &lt;div&gt; elements</td>
             </tr>
             <tr>
               <td><a href="sel_element_gt.asp"><i>element</i>&gt;<i>element</i></a></td>
               <td class="notranslate">div &gt; p</td>
+              <td></td>
               <td>Selects all &lt;p&gt; elements where the parent is a &lt;div&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_element_pluss.asp"><i>element</i>+<i>element</i></a></td>
               <td class="notranslate">div + p</td>
+              <td></td>
               <td>Selects all &lt;p&gt; elements that are placed immediately after &lt;div&gt; elements</td>
             </tr>
             <tr>
               <td><a href="sel_gen_sibling.asp"><i>element1</i>~<i>element2</i></a></td>
               <td>p ~ ul</td>
+              <td></td>
               <td>Selects every &lt;ul&gt; element that are preceded by a &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_attribute.asp">[<i>attribute</i>]</a></td>
               <td class="notranslate">[target]</td>
+              <td></td>
               <td>Selects all elements with a target attribute</td>
             </tr>
             <tr>
               <td><a href="sel_attribute_value.asp">[<i>attribute</i>=<i>value</i>]</a></td>
               <td class="notranslate">[target=_blank]</td>
+              <td></td>
               <td>Selects all elements with target="_blank"</td>
             </tr>
             <tr>
               <td><a href="sel_attribute_value_contains.asp">[<i>attribute</i>~=<i>value</i>]</a></td>
               <td class="notranslate">[title~=flower]</td>
+              <td></td>
               <td>Selects all elements with a title attribute containing the word "flower"</td>
             </tr>
             <tr>
               <td><a href="sel_attribute_value_lang.asp">[<i>attribute</i>|=<i>value</i>]</a></td>
               <td class="notranslate">[lang|=en]</td>
+              <td></td>
               <td>Selects all elements with a lang attribute value starting with "en"</td>
             </tr>
             <tr>
               <td><a href="sel_attr_begin.asp">[<i>attribute</i>^=<i>value</i>]</a></td>
               <td>a[href^="https"]</td>
+              <td></td>
               <td>Selects every &lt;a&gt; element whose href attribute value begins with "https"</td>
             </tr>
             <tr>
               <td><a href="sel_attr_end.asp">[<i>attribute</i>$=<i>value</i>]</a></td>
               <td>a[href$=".pdf"]</td>
+              <td></td>
               <td>Selects every &lt;a&gt; element whose href attribute value ends with ".pdf"</td>
             </tr>
             <tr>
               <td><a href="sel_attr_contain.asp">[<i>attribute</i>*=<i>value</i>]</a></td>
               <td>a[href*="w3schools"]</td>
+              <td></td>
               <td>Selects every &lt;a&gt; element whose href attribute value contains the substring "w3schools"</td>
             </tr>
             <tr>
               <td><a href="sel_active.asp">:active</a></td>
               <td class="notranslate">a:active</td>
+              <td></td>
               <td>Selects the active link</td>
             </tr>
             <tr>
               <td><a href="sel_after.asp">::after</a></td>
               <td class="notranslate">p::after</td>
+              <td></td>
               <td>Insert something after the content of each &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_before.asp">::before</a></td>
               <td class="notranslate">p::before</td>
+              <td></td>
               <td>Insert something before&nbsp;the content of each &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_checked.asp">:checked</a></td>
               <td>input:checked</td>
+              <td></td>
               <td>Selects every checked &lt;input&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_default.asp">:default</a></td>
               <td>input:default</td>
+              <td></td>
               <td>Selects the default &lt;input&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_disabled.asp">:disabled</a></td>
               <td>input:disabled</td>
+              <td></td>
               <td>Selects every disabled &lt;input&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_empty.asp">:empty</a></td>
               <td>p:empty</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that has no children (including text nodes)</td>
             </tr>
             <tr>
               <td><a href="sel_enabled.asp">:enabled</a></td>
               <td>input:enabled</td>
+              <td></td>
               <td>Selects every enabled &lt;input&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_firstchild.asp">:first-child</a></td>
               <td class="notranslate">p:first-child</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the first child of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_firstletter.asp">::first-letter</a></td>
               <td class="notranslate">p::first-letter</td>
+              <td></td>
               <td>Selects the first letter of every &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_firstline.asp">::first-line</a></td>
               <td class="notranslate">p::first-line</td>
+              <td></td>
               <td>Selects the first line of every &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_first-of-type.asp">:first-of-type</a></td>
               <td>p:first-of-type</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the first &lt;p&gt; element of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_focus.asp">:focus</a></td>
               <td class="notranslate">input:focus</td>
+              <td></td>
               <td>Selects the input element which has focus</td>
             </tr>
             <tr>
               <td><a href="sel_hover.asp">:hover</a></td>
               <td class="notranslate">a:hover</td>
+              <td></td>
               <td>Selects links on mouse over</td>
             </tr>
             <tr>
               <td><a href="sel_in-range.asp">:in-range</a></td>
               <td class="notranslate">input:in-range</td>
+              <td></td>
               <td>Selects input elements with a value within a specified range</td>
             </tr>
             <tr>
               <td><a href="sel_indeterminate.asp">:indeterminate</a></td>
               <td class="notranslate">input:indeterminate</td>
+              <td></td>
               <td>Selects input elements that are in an indeterminate state</td>
             </tr>
             <tr>
               <td><a href="sel_invalid.asp">:invalid</a></td>
               <td class="notranslate">input:invalid</td>
+              <td></td>
               <td>Selects all input elements with an invalid value</td>
             </tr>
             <tr>
               <td><a href="sel_lang.asp">:lang(<i>language</i>)</a></td>
               <td class="notranslate">p:lang(it)</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element with a lang attribute equal to "it" (Italian)</td>
             </tr>
             <tr>
               <td><a href="sel_last-child.asp">:last-child</a></td>
               <td>p:last-child</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the last child of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_last-of-type.asp">:last-of-type</a></td>
               <td>p:last-of-type</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the last &lt;p&gt; element of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_link.asp">:link</a></td>
               <td class="notranslate">a:link</td>
+              <td></td>
               <td>Selects all unvisited links</td>
             </tr>
             <tr>
               <td><a href="sel_not.asp">:not(<i>selector</i>)</a></td>
               <td>:not(p)</td>
+              <td></td>
               <td>Selects every element that is not a &lt;p&gt; element</td>
             </tr>
             <tr>
               <td><a href="sel_nth-child.asp">:nth-child(<i>n</i>)</a></td>
               <td>p:nth-child(2)</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the second child of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_nth-last-child.asp">:nth-last-child(<i>n</i>)</a></td>
               <td>p:nth-last-child(2)</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the second child of its parent, counting from the last child</td>
             </tr>
             <tr>
               <td><a href="sel_nth-last-of-type.asp">:nth-last-of-type(<i>n</i>)</a></td>
               <td>p:nth-last-of-type(2)</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the second &lt;p&gt; element of its parent, counting from the last child</td>
             </tr>
             <tr>
               <td><a href="sel_nth-of-type.asp">:nth-of-type(<i>n</i>)</a></td>
               <td>p:nth-of-type(2)</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the second &lt;p&gt; element of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_only-of-type.asp">:only-of-type</a></td>
               <td>p:only-of-type</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the only &lt;p&gt; element of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_only-child.asp">:only-child</a></td>
               <td>p:only-child</td>
+              <td></td>
               <td>Selects every &lt;p&gt; element that is the only child of its parent</td>
             </tr>
             <tr>
               <td><a href="sel_optional.asp">:optional</a></td>
               <td class="notranslate">input:optional</td>
+              <td></td>
               <td>Selects input elements with no "required" attribute</td>
             </tr>
             <tr>
               <td><a href="sel_out-of-range.asp">:out-of-range</a></td>
               <td class="notranslate">input:out-of-range</td>
+              <td></td>
               <td>Selects input elements with a value outside a specified range</td>
             </tr>
             <tr>
               <td><a href="sel_placeholder.asp">::placeholder</a></td>
               <td class="notranslate">input::placeholder</td>
+              <td></td>
               <td>Selects input elements with the "placeholder" attribute specified</td>
             </tr>
             <tr>
               <td><a href="sel_read-only.asp">:read-only</a></td>
               <td class="notranslate">input:read-only</td>
+              <td></td>
               <td>Selects input elements with the "readonly" attribute specified</td>
             </tr>
             <tr>
               <td><a href="sel_read-write.asp">:read-write</a></td>
               <td class="notranslate">input:read-write</td>
+              <td></td>
               <td>Selects input elements with the "readonly" attribute NOT specified</td>
             </tr>
             <tr>
               <td><a href="sel_required.asp">:required</a></td>
               <td class="notranslate">input:required</td>
+              <td></td>
               <td>Selects input elements with the "required" attribute specified</td>
             </tr>
             <tr>
               <td><a href="sel_root.asp">:root</a></td>
               <td>:root</td>
+              <td></td>
               <td>Selects the document's root element</td>
             </tr>
             <tr>
               <td><a href="sel_selection.asp">::selection</a></td>
               <td>::selection</td>
+              <td></td>
               <td>Selects the portion of an element that is selected by a user</td>
             </tr>
             <tr>
               <td><a href="sel_target.asp">:target</a></td>
               <td>#news:target </td>
+              <td></td>
               <td>Selects the current active #news element (clicked on a URL containing that anchor name)</td>
             </tr>
             <tr>
               <td><a href="sel_valid.asp">:valid</a></td>
               <td class="notranslate">input:valid</td>
+              <td></td>
               <td>Selects all input elements with a valid value</td>
             </tr>
             <tr>
               <td><a href="sel_visited.asp">:visited</a></td>
               <td class="notranslate">a:visited</td>
+              <td></td>
               <td>Selects all visited links</td>
             </tr>
         </table>
@@ -690,8 +745,10 @@
 
 
 
-        <!-- END OF CONTENT -->
-
-        <p style = "padding: 300px;"></p>
+        <!-- Ending of Content -->
+        <hr>
+        <footer>
+          &copy; Jingwora All rights reserved.
+        </footer>
     </body>
 </html>
