--- a/contents/HTML/HTML.html
+++ b/contents/HTML/HTML.html
@@ -905,13 +905,13 @@
         <footer class="sub-footer">
           <p>Copyright &copy; 2020 <code>&lt;footer&gt;	&lt;/footer&gt;</code></p>
         </footer>
-        <br>
+
+
 
         <!-- Ending of Content -->
-        <hr />
-        <p>&copy; Jingwora All rights reserved.</p>
-        <br />
-
-        <p style = "padding: 50px;"></p>
+        <hr>
+        <footer>
+          &copy; Jingwora All rights reserved.
+        </footer>
     </body>
 </html>
