--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -2904,10 +2904,12 @@ for (let i of itemList) {
    <p id="1110" style="color:#649d66"></p>
 
 
-<!-- End of page -->
 
-  <p style="padding:100px"></p>
-  <script src="main.js"></script>
+        <!-- Ending of Content -->
+        <hr>
+        <footer>
+          &copy; Jingwora All rights reserved.
+        </footer>
 </body>
 </html>
 
