--- a/contents.html
+++ b/contents.html
@@ -46,7 +46,7 @@
 
 									<section>
 										<h2 class="major" >Contents</h2>
-										<p>Collections of resources related to data anlysis, artificial intelligent, business intelligents and more...</p>
+										<p>Collections of resources related to data analysis, artificial intelligent, business intelligents and more...</p>
 										<br>
 										
 										<img src="contents_resources/icons/code_essence.png" width="80"><h1>CODE ESSENCE</h1>
