--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
 								<div class="content">
 									<h2 class="major">as Data Analysis</h2>
 									<p>
-										More than 10 years experience in BI(business intelligent) development for variouse business needs including retail management, customer relationship management, marketing analysis, production management, supply chain management, financial repot and more.
+										More than 10 years experience in BI(business intelligent) development to serve variouse business needs including retail management, customer relationship management, marketing analysis, production management, supply chain management, financial repot and more.
 									</p>
 									<p>Tools: Tableau and Power BI report</p>
 									<a href="projects.html" class="special">Learn more</a>
